2004-07-09  Mark McLoughlin  <mark@skynet.ie>

	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
	bug #120349.

	* doc/gconf/gconf.sgml,
	  doc/gconf/tmpl/gconf-client.sgml,
	  doc/gconf/tmpl/gconf.sgml,
	  doc/intro-article.sgml,
	  gconf/gconf-client.h,
	  gconf/gconf-listeners.h: bring the docs up to
	date with the patch that we're using GObject instead
	of GtkObject.

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* gconf/default.path.in: Removed outdated comment.

2004-07-02  Mark McLoughlin  <mark@skynet.ie>

	Fixup some bugs with the merge files support which was
	causing unset entries not to be completely wiped out.

	* backends/markup-tree.c:
	(clean_old_local_schemas): rename.
	(clean_old_local_schemas_recurse): if we're saving as a subtree,
	recurse down the tree.
	(delete_useless_subdirs): ignore the some_subdir_needs_sync and
	entries_need_save flags on the subdir - they're irrelevant if
	there's no entries or subdirs. Also, check whether the subdir
	is in a subtree file rather than current dir.
	(delete_useless_subdirs_recurse): correctly recurse over subdirs.
	(delete_useless_entries_recurse): implement recursively deleting
	entries too.
	(markup_dir_sync): recusively clean schemas and delete entries
	if we're saving as a subtree.

2004-07-02  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post release bump to 2.6.4.

==================== 2.6.3 ====================

2004-07-02  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.3.

2004-07-02  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #145141.

	* backends/markup-tree.c: (load_subdirs): recognise
	subdirs which don't contain a %gconf.xml file but do
	contain a %gconf-tree.xml file.

2004-06-21  Mark McLoughlin  <mark@skynet.ie>

	Patch from Leonardo Quijano Vincenzi <lquijano@hotpop.com>
	in bug #144502.

	* doc/gconf/tmpl/gconf-client.sgml: warn the g_type_init()
	must be called before using GConfClient.

2004-06-14  Mark McLoughlin  <mark@skynet.ie>
