@@ -1,3 +1,9 @@
+2004-08-10  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconftool.c: (main): set the umask for
+	--makefile-install-mode	so we always install the
+	schemas with the correct permissions. bug #145041.
+
 2004-07-09  Mark McLoughlin  <mark@skynet.ie>
 
 	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
